feat: session merge sort

--- a/week-3/search.html
+++ b/week-3/search.html
@@ -153,6 +153,7 @@
       }
     </code>
   </pre>
+  <p>Merge sort is another divide and conquer algorithm that repeated divides the array into two equal halves until there's only one element left. From here, elements are merged by putting them in the appropriate order.</p>
   <p>The following code demonstrates the merge sort algorithm:</p>
   <pre>
     <code>
