feat:trees notes

--- a/week-4/trees/trees.html
+++ b/week-4/trees/trees.html
@@ -84,12 +84,14 @@
   </pre>
   <h4>Types of tress</h4>
   <ul>
-    <li>Binary search tree</li>
+    <li>Binary tree</li>
     <li>Red-black tree</li>
     <li>AVL tree</li>
     <li>Splay tree</li>
     <li>Treap</li>
     <li>Splay-tree</li>
   </ul>
+  <h4>Binary tree</h4>
+  <p>A binary tree is a type of tree where each node has at most two children.</p>
 </body>
 </html>
